--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /data
 /volumes
 /result
-
+venv
 /env/**/*.env
 
 node_modules
@@ -15,3 +15,5 @@ node_modules
 __pycache__
 .env
 .pytest_cache
+*.egg-info
+.idea
